XWIKI-11665: The actions button for Admin from Users are wrong displayed on IE10
(cherry picked from commit 85399656ce94d206896ae2a3dfb798682cd42c40)

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/table/livetable.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/js/xwiki/table/livetable.css
@@ -408,6 +408,7 @@ div.xwiki-livetable-pagination-content span.pagenumber:focus {
 }
 
 .icon-manageg {
+  box-sizing: content-box; /* Needed by IE */
   padding-right: 10px;
 }
 
