XRENDERING-393: The tag "tt" is used for inline verbatim content.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/type.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/type.less
@@ -54,7 +54,7 @@ ul.xlist li.create a {
 
 // Verbatim ===============================================================
 
-tt.wikimodel-verbatim {
+tt.wikimodel-verbatim, span.wikimodel-verbatim {
   font-family: sans-serif;
   white-space: pre-wrap;
 }
