XWIKI-11938: When a page has a translation, the breadcrumbs of the original document and the translation are not the same - Always using the parent's main document instead of the parent's translated document. Only the title that is displayed in the breadcrums is now obtained from the parent's translated document.
(cherry picked from commit 21e580f1154227f0010308dce7732fc4272ad1dc)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/hierarchy.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/hierarchy.vm
@@ -5,10 +5,10 @@
   #set($parent = $doc.parent)
   #if(($parent != '') && ($level < 6) && (!$parents.contains($parent)))
     #set($discard = $parents.add($parent))
-    #set($pdoc = $xwiki.getDocument($parent).getTranslatedDocument())
+    #set($pdoc = $xwiki.getDocument($parent))
     #if ($pdoc)
       #set ($pdocurl = $pdoc.getURL('view'))
-      #set ($nstring = "<li><a href='$pdocurl'>$escapetool.xml(${pdoc.getPlainTitle()})</a></li>$result")
+      #set ($nstring = "<li><a href='$pdocurl'>$escapetool.xml(${pdoc.translatedDocument.plainTitle})</a></li>$result")
       #set ($level = $level + 1)
       #computeHierarchy($pdoc $nstring $level)
     #else
