--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/hierarchy.vm
@@ -5,10 +5,10 @@
   #set($parent = $doc.parent)
   #if(($parent != '') && ($level < 6) && (!$parents.contains($parent)))
     #set($discard = $parents.add($parent))
-    #set($pdoc = $xwiki.getDocument($parent).getTranslatedDocument())
+    #set($pdoc = $xwiki.getDocument($parent))
     #if ($pdoc)
       #set ($pdocurl = $pdoc.getURL('view'))
-      #set ($nstring = "<a href='$pdocurl'>$escapetool.xml(${pdoc.getPlainTitle()})</a> <span class='separator'>&#187;</span> $result")
+      #set ($nstring = "<a href='$pdocurl'>$escapetool.xml(${pdoc.translatedDocument.plainTitle})</a> <span class='separator'>&#187;</span> $result")
       #set ($level = $level + 1)
       #computeHierarchy($pdoc $nstring $level)
     #else
