XWIKI-11983: Fix HTML5 violations.
* The "summary" attribute is not longer valid for a table in HTML5. Using an hidden <caption> instead.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
@@ -1377,7 +1377,10 @@ ${Msz}Mb##
   #if($tagcloud || $hasTopFilters)
   </div>
   #end
-  <table id="${divid}" class="xwiki-livetable"#if("$!options.description" != '') summary="$options.description"#end>
+  <table id="${divid}" class="xwiki-livetable">
+    #if("$!options.description" != '')
+      <caption class="sr-only">$options.description</caption>
+    #end
     <tr>
       <td class="xwiki-livetable-pagination">
         <span id="${divid}-limits" class="xwiki-livetable-limits"></span>
