XWIKI-11983: Fix HTML5 violations.
* The action attribute of a <form> element cannot be empty anymore.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/delete.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/delete.vm
@@ -74,7 +74,7 @@
   #xwikimessageboxend()
 #else ## request.id
   #xwikimessageboxstart($services.localization.render('core.delete') $services.localization.render('core.recyclebin.completelyDeleteConfirm'))
-    <form action="" method="post">
+    <form action="$xwiki.relativeRequestURL" method="post">
       <div class="hidden">
         ## CSRF prevention
         <input type="hidden" name="form_token" value="$!{services.csrf.getToken()}" />
