XWIKI-12034: Following another user doesn't work

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/watch.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/watch.vm
@@ -12,6 +12,7 @@
   #set ($elementType = 'DOCUMENT')
 #elseif ($do.contains('user'))
   #set ($elementType = 'USER')
+  #set ($watchRef = $services.model.serialize($doc.documentReference, 'default'))
 #end
 ##
 #if ($do.startsWith('add'))
