--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.cfg.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.cfg.vm
@@ -131,7 +131,13 @@ xwiki.tags=1
 # xwiki.store.cache=1
 
 #-# Maximum number of documents to keep in the cache.
+#-# The default is 100.
 # xwiki.store.cache.capacity=100
+
+#-# Maximum number of documents to keep in the cache indicating if a document exist.
+#-# Since this cache contain only boolean it can be very big without taking much memory.
+#-# The default is 10000.
+# xwiki.store.cache.pageexistcapacity=10000
 
 #-# [Since 1.6M1]
 #-# Force the database name for the main wiki.
